polyphone (1.9) unstable; urgency=low

  * (new) portuguese translation
  * (new) tool to export the preset list in a text format
  * (fix) crash with a drag & drop in the tree
  * (fix) release bug when using loop + end mode

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 16 Nov 2017 17:51:55 +0100


polyphone (1.8) UNRELEASED; urgency=low

  * (new) light and dark color themes
  * (new) czech translation
  * (new) links to the online manual & forum
  * (new) tool to call an external editor for samples
  * (improvement) tool "normalize volume" replaced by "change volume" 
  * (improvement) tools "remove whistling" and "brickwall filter" replaced by "filter frequencies" 
  * (improvement) the attenuation tool can now deal with global parameters and presets 
  * (improvement) using space or enter over a cell makes it editable
  * (improvement) ctrl-x can be used in the tables
  * (improvement) double-clicking on a division go to the corresponding sample or instrument
  * (improvement) logo changed
  * (improvement) translation files can be outside the executable
  * (fix) behaviour of the duplication tool when using several velocity ranges
  * (fix) a progress dialog was displayed when opening the software
  * (fix) natural order in the tree and tables
  * (fix) behaviour of the "loop playback" cell in the tables

 -- Davy Triponney <davy.triponney@gmail.com>  Wed, 16 Nov 2016 17:51:55 +0100


polyphone (1.7) UNRELEASED; urgency=low

  * (new) convenient view to graphically edit key and velocity ranges
  * (new) overview pages showing a configuration summary of all samples, instruments or presets
  * (new) sf3 import / export
  * (new) serbian translation
  * (new) command line for conversions between sf2, sf3, sfz and sfArk
  * (improvement) simultaneous editing of multiple global divisions
  * (improvement) tools are allowed when several instruments or presets are selected in the tree
  * (improvement) pasting modulators is allowed for several divisions